--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 
 <head>
+	<meta charset="UTF-8">
     <script type="text/javascript">
 	window.onload = function() {
     var form = document.getElementById("thisform");
