--- a/logout.html
+++ b/logout.html
@@ -124,7 +124,7 @@
 <body>
     <div class="login-page">
         <div class="form">
-            <form class="register-form" action="/register" method="POST">
+            <form class="register-form" action="http://192.168.2.83:5005/register" method="POST">
                 <b>REGISTER</b> <br \="">
                 <input type="text" name="username" placeholder="username">
                 <input type="text" name="animal" placeholder="favorite animal">
@@ -132,7 +132,7 @@
                 <button>create</button>
                 <p class="message">Already registered? <a href="#">Sign In</a></p>
             </form>
-            <form class="login-form" action="/login" method="POST">
+            <form class="login-form" action="http://192.168.2.83:5005/login" method="POST">
                 <b>LOGIN</b> <br \="">
                 <input type="text" name="username" placeholder="username">
                 <input type="password" name="password" placeholder="password">
